[project]
name = "python-sandbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Marlon Cardoso",email = "marlonrcardoso@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "noise (>=1.2.2,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "python_sandbox", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
